Fix forced dark mode breaking the theme

--- a/userChrome.css
+++ b/userChrome.css
@@ -1,3 +1,4 @@
+/* Animations */
 @keyframes slide {
     from {
         background-position: 0 0;
@@ -16,10 +17,12 @@
     }
 }
 
+/* Temporary white mode fix */
 * {
     color: white;
 }
 
+/* Bottom part background */
 #browser {
     animation: pulsate alternate ease-in-out 5s infinite !important;
     background: linear-gradient(
@@ -28,10 +31,6 @@
         rgba(245, 130, 30) 70%
     );
     box-shadow: black inset 0 0 5px;
-}
-
-#alltabs-button {
-    display: none;
 }
 
 #tabbrowser-tabbox,
@@ -45,10 +44,14 @@
     margin-left: 15px !important;
 }
 
+/* Sidebar */
+#alltabs-button {
+    display: none;
+}
+
 #sidebar-main {
     margin-top: 20px;
     margin-bottom: 20px;
-    /* width: 50px !important; */
 }
 
 .tab-background {
@@ -67,15 +70,18 @@
     margin-left: 5px;
 }
 
+/* Top bar */
 #navigator-toolbox {
-    background-image: url(https://color.firefox.com/images/bg-040-0df8e190c15355cd3fa41a58e86426a9.svg);
+    background-image: url(https://color.firefox.com/images/bg-040-0df8e190c15355cd3fa41a58e86426a9.svg) !important;
+    background-repeat: repeat !important;
     animation: slide linear infinite 25s;
     background-color: rgb(0, 128, 0) !important;
-    color: white !
+    
 }
 
 #navigator-toolbox * {
     opacity: 1 !important;
+    
 }
 
 #nav-bar * {
@@ -83,7 +89,6 @@
 }
 
 #nav-bar {
-    color: white;
     padding: 0;
     box-shadow: black inset 0px 0px 10px;
 }
